fix: mobile David shifted more right (right:-22%)

--- a/src/index.css
+++ b/src/index.css
@@ -1830,7 +1830,7 @@ body{
   .lp-hero-david {
     display: flex;
     width: 95vw;
-    right: -14%;
+    right: -22%;
     top: -8%;
     bottom: auto;
     height: 78%;
